Fix T92355: Quadriflow crashes with zero length edges

Add a check for zero length edges to the manifold check as quadriflow
doesn't handle meshes with these.