source/blender/editors/object/object_remesh.cc
@@ -708,9 +708,16 @@ static bool mesh_is_manifold_consistent(Mesh *mesh)
   }
 
   if (is_manifold_consistent) {
-    /* check for wire edges */
     for (uint i = 0; i < mesh->totedge; i++) {
+      /* Check for wire edges. */
       if (edge_faces[i] == 0) {
+        is_manifold_consistent = false;
+        break;
+      }
+      /* Check for zero length edges */
+      MVert *v1 = &mesh->mvert[mesh->medge[i].v1];
+      MVert *v2 = &mesh->mvert[mesh->medge[i].v2];
+      if (compare_v3v3(v1->co, v2->co, 1e-4f)) {
         is_manifold_consistent = false;
         break;
       }
